<resources>
  <string name="app_name">Nanoleaf Colors</string>
    <string name="created_by">Created By: Anshdeep Singh</string>
    <string name="red">Red</string>
  <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
  <string name="green">Green</string>
  <string name="blue">Blue</string>
  <string name="purple">Purple</string>
    <string name="clear">Clear</string>
    <string name="calculate">Calculate</string>
    <string name="results">Results</string>
</resources>